--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,3 @@
-/* css variables for easily changing colors */
 :root{
     --header:#3B0086;
     --body:#6200B3;
@@ -13,37 +12,36 @@
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-/* For taking away the underline mostly*/
 a{
     text-decoration: none; 
 }
 
 header{
     background-color: var(--header);
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    padding: 1rem;
+    justify-content: center;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
 }
 
 h1{
     font-size: 5rem;
 }
 
+
+.menu-items {
+    color: #3B0086;
+}
+
 nav ul li{
-    padding-left: 20rem;
     display: inline;
     text-decoration: none;
     font-size: x-large;
-    margin-right: 15rem;
+    margin-left: 10rem;
 }
 
 nav ul li a{
     color: #fff;
 }
-
-/* without width it will be abnormally large */
-/* get rid of random background color sneaking thru by changing img to block from inline*/
 section img {
     height: 50%;
     width: 100%;
@@ -96,22 +94,12 @@ h2{
 .logo {
     color: white;
     font-weight: bold;
-    padding-left: 20rem;
-    display: inline;
     text-decoration: none;
     font-size: x-large;
-    margin-right: 15rem;
+    margin-right: 35rem;
+    margin-top: 20rem;
 }
 
-.promo{
-    margin: auto;
-    width: 90%;
-    text-align: center;
-    padding: 1rem;
-    border-style: solid;
-    border-width: 5px;
-    margin-bottom: 1rem;
-}
 
 .card {
     min-height: 350px;
@@ -152,11 +140,8 @@ h3{
 }
 
 .proj{
-    /* min-height: 500px; */
     text-align: center;
     overflow: hidden;
-    /* position: relative; */
-
 }
 
 .proj iframe{
